--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -21,22 +21,8 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="sendMessage"
+            android:onClick="getPhotos"
             android:text="@string/button_send" />
-
-        <GridView
-            android:id="@+id/gridview"
-            android:layout_width="match_parent"
-            android:layout_height="304dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:columnWidth="90dp"
-            android:gravity="center"
-            android:horizontalSpacing="10dp"
-            android:numColumns="auto_fit"
-            android:stretchMode="columnWidth"
-            android:verticalSpacing="10dp" >
-        </GridView>
 
         <Button
             android:id="@+id/button2"
@@ -55,16 +41,7 @@
             android:onClick="getSMS"
             android:text="@string/get_SMS" />
 
-        <Button
-            android:id="@+id/button3"
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentTop="true"
-            android:onClick="register"            
-            android:text="Register" />
-
+      
     </RelativeLayout>
 
 </LinearLayout>
